[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/boombox.png" type="Texture" id=1]
[ext_resource path="res://assets/sound/sfx/sfx_boombox.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/scripts/boombox.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/sfx/sfx_punch2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/sfx_punch6.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/sfx_punch4.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/sfx_punch5.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=8]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/sfx_punch3.wav" type="AudioStream" id=10]
[ext_resource path="res://addons/VoiceGenerator/VoiceGeneratorAudioStreamPlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sound/sfx/vox_impspeak.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 25.5 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boombox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -27 ), Vector2( 0, -21.5 ), Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boombox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim (2)"
tracks/0/type = "value"
tracks/0/path = NodePath("Boombox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boombox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="boombox" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 3 )

[node name="Boombox" type="Sprite" parent="."]
position = Vector2( 0, -27 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -25.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
"anims/New Anim" = SubResource( 2 )
"anims/New Anim (2)" = SubResource( 3 )

[node name="tune" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
max_distance = 500.0
bus = "SFX"

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -6.55
bus = "SFX"
script = ExtResource( 8 )

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.92
bus = "SFX"
script = ExtResource( 8 )

[node name="hurt4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 8 )

[node name="hurt5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 8 )

[node name="hurt6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 8 )

[node name="hurt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 8 )

[node name="VoiceGeneratorAudioStreamPlayer" parent="." instance=ExtResource( 11 )]
stream = ExtResource( 12 )
